deployments/all-resorcerer.yaml
apiVersion:       extensions/v1beta1
kind:             Deployment
metadata:
  name:           resorcerer
spec:
  replicas:       1
  template:
    metadata:
      labels:
        app:      resorcerer
    spec:
      containers:
      - name:     resorcerer
        image:    quay.io/mhausenblas/resorcerer:0.5.0
