deployments/all-cadvisor.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cadvisor
    name: cadvisor
  spec:
    dockerImageRepository: google/cadvisor
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cadvisor
    name: cadvisor
  spec:
    replicas: 1
    selector:
      app: cadvisor
      deploymentconfig: cadvisor
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: cadvisor
          deploymentconfig: cadvisor
      spec:
        containers:
        - image: google/cadvisor
          name: cadvisor
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - cadvisor
        from:
          kind: ImageStreamTag
          name: cadvisor:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: cadvisor
    name: cadvisor
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: cadvisor
      deploymentconfig: cadvisor
  status:
    loadBalancer: {}
kind: List
metadata: {}
